# StansMicroPy

./: .gitignore  LICENSE  README.md  Report.md  buttonTogglePrograms.py  pico_as_WiFiserver.py  pyproject.toml  requirements.txt  schedulerDemo.py
Baremetal_Code/: Keypad.py  ServoMotor.py  SoundSensor.py  UltrasonicLed.py  blink.py  led.py  soundsensor_servo.py
Component_Lists_and_Projects/: AI_Kit_recommendations.md
Computer_Vision/: Gesture1_OpenCV_PicoServer.py  Gesture1_OpenCV_pc.py  mediapipe_hands_test.py  pinch_led_control.py  pinch_led_server.py
Computer_Vision/COCO_Object_Detection/: COCO_Object_Detection.py
Docs/: Button.md  Coding_Guide.md  CompVision.md  LCD.md  LED.md  OLED.md  README.md  RGB.md  Raspberry_Pi_Pico_Coding_Guide.md  Scheduler.md  Servo.md  Ultrasonic.md  WiFiManager.md
Examples/Button/: buttontoggleLED.py
Examples/LCD/: LCD_detect_address.py  LCDtest2.py  lcdtest.py
Examples/LED/: 2Leds_BlinkandBrightness.py  Blink_onBoardExt.py  ExtLedBlink.py  OnBoardLedBlink.py  SetExtLedBrightness.py  leds_servo.py
Examples/RGBLED/: RGBtest.py
Examples/Servo/: movetoangle.py  servooscillate.py  servosweep.py
Examples/Ultrasonic/: Ultsled.py  measureDistance.py
Libraries/: LiquidCrystal.py  RGBLED.py  led.py  pushbutton.py  servo.py  ultrasonic.py
Micropython_Coding_Guide/: LED.md  Raspberry_Pi_Pico_Coding_Guide.md
Pico_MicroPython_Firmware/: desktop.ini
projects/: README.md  keypad_read.py
projects/Button/: button_toggle_led.py
projects/Computer_Vision/: MediaPipe_Installation_Guide.md  (+4 more)
stansmicropy/: __init__.py  compVision.py  led.py  oled.py  servo.py  wifiManager.py
task/: ledTask.py  servoTask.py
(+62 files in other folders)
