[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stansmicropy"
version = "0.1.0"
description = "Libraries and projects for MicroPython compatible boards"
readme = "README.md"
authors = [
    { name="Somtochukwu Emeka-Onwuneme", email="somtochukwu.eo@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.24",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "opencv-contrib-python>=4.13.0.92",
    "mpremote >=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]